--- a/basic.html
+++ b/basic.html
@@ -1682,7 +1682,7 @@ the effect is equivalent to a <span class='texttt'>return</span> with operand <s
 are initialized as a consequence of program initiation. Variables with
 thread storage duration are initialized as a consequence of thread execution.
 Within each of these phases of initiation, initialization occurs as follows.</p></div><div class='para' id='start.static-2'><div class='marginalizedparent'><a class='marginalized' href='#start.static-2'>2</a></div><p ><span class='indexparent'><a class='index' id='initialization,static_object'></a></span><span class='indexparent'><a class='index' id='initialization,constant'></a></span>A <a class='hidden_link' href='#def:constant_initializer' id='def:constant_initializer'><i>constant initializer</i></a> for an object <span class='texttt'>o</span> is an expression that is a
-constant expression, except that it may also invoke <span class='texttt'>constexpr</span> constructors
+constant expression, except that it may also invoke constexpr constructors
 for <span class='texttt'>o</span> and its subobjects even if those objects are of non-literal class
 types. [&nbsp;<i>Note:</i> Such a class may have a non-trivial destructor. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 <a class='hidden_link' href='#def:constant_initialization' id='def:constant_initialization'><i>Constant initialization</i></a> is performed:
@@ -2414,7 +2414,7 @@ has all of the following properties:
 </p><ul class='itemize'><li id='types-10.5.1'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#types-10.5.1'>(10.5.1)</a></div><p >it has a trivial destructor,
 </p></li><li id='types-10.5.2'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#types-10.5.2'>(10.5.2)</a></div><p >it is either a closure type (<a href='expr.prim.lambda'>[expr.prim.lambda]</a>),
 an aggregate type (<a href='dcl.init.aggr'>[dcl.init.aggr]</a>), or
-has at least one <span class='texttt'>constexpr</span> constructor or constructor template
+has at least one constexpr constructor or constructor template
 (possibly inherited (<a href='namespace.udecl'>[namespace.udecl]</a>) from a base class)
 that is not a copy or move constructor,
 </p></li><li id='types-10.5.3'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#types-10.5.3'>(10.5.3)</a></div><p >if it is a union, at least one of its non-static data members is
@@ -2748,8 +2748,8 @@ const-qualified.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='footnote' id='footnote-55'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-55'>55)</a></div><p >The same representation
 and alignment requirements are meant to imply
 interchangeability as arguments to functions, return values from
-functions, and non-static data members of unions.</p></div></div></div><div id='lval'><h2 ><a class='secnum' href='#lval' style='min-width:88pt'>3.10</a> Lvalues and rvalues <a class='abbr_ref' href='basic.lval'>[basic.lval]</a></h2><div class='para' id='lval-1'><div class='marginalizedparent'><a class='marginalized' href='#lval-1'>1</a></div><p >Expressions are categorized according to the taxonomy in Figure <a href='#fig:categories'>[fig:categories]</a>.</p><div class='figure' id='fig:categories'><svg width="361pt" height="182pt"
- viewBox="0.00 0.00 361.00 182.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+functions, and non-static data members of unions.</p></div></div></div><div id='lval'><h2 ><a class='secnum' href='#lval' style='min-width:88pt'>3.10</a> Lvalues and rvalues <a class='abbr_ref' href='basic.lval'>[basic.lval]</a></h2><div class='para' id='lval-1'><div class='marginalizedparent'><a class='marginalized' href='#lval-1'>1</a></div><p >Expressions are categorized according to the taxonomy in Figure <a href='#fig:categories'>[fig:categories]</a>.</p><div class='figure' id='fig:categories'><svg width="360pt" height="182pt"
+ viewBox="0.00 0.00 359.50 182.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <g class="graph" transform="scale(1 1) rotate(0) translate(4 178)">
 <title>categories</title>
 <!-- expression -->
@@ -2799,12 +2799,12 @@ functions, and non-static data members of unions.</p></div></div></div><div id='
 </g>
 <!-- prvalue -->
 <g class="node"><title>prvalue</title>
-<text text-anchor="middle" x="308.5" y="-10.8" font-family="Times,serif" font-size="24.00">prvalue</text>
+<text text-anchor="middle" x="307.5" y="-10.8" font-family="Times,serif" font-size="24.00">prvalue</text>
 </g>
 <!-- rvalue&#45;&gt;prvalue -->
 <g class="edge"><title>rvalue&#45;&gt;prvalue</title>
-<path fill="none" stroke="black" d="M255.852,-69.8849C264.405,-61.4557 275.039,-50.9761 284.506,-41.6464"/>
-<polygon fill="black" stroke="black" points="287.12,-43.9839 291.786,-34.4717 282.207,-38.9982 287.12,-43.9839"/>
+<path fill="none" stroke="black" d="M255.615,-69.8849C264.044,-61.4557 274.524,-50.9761 283.854,-41.6464"/>
+<polygon fill="black" stroke="black" points="286.432,-44.0177 291.028,-34.4717 281.482,-39.068 286.432,-44.0177"/>
 </g>
 </g>
 </svg>
