--- a/basic.types.html
+++ b/basic.types.html
@@ -120,7 +120,7 @@ has all of the following properties:
 </p><ul class='itemize'><li id='10.5.1'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#10.5.1'>(10.5.1)</a></div><p >it has a trivial destructor,
 </p></li><li id='10.5.2'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#10.5.2'>(10.5.2)</a></div><p >it is either a closure type (<a href='expr.prim.lambda'>[expr.prim.lambda]</a>),
 an aggregate type (<a href='dcl.init.aggr'>[dcl.init.aggr]</a>), or
-has at least one <span class='texttt'>constexpr</span> constructor or constructor template
+has at least one constexpr constructor or constructor template
 (possibly inherited (<a href='namespace.udecl'>[namespace.udecl]</a>) from a base class)
 that is not a copy or move constructor,
 </p></li><li id='10.5.3'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#10.5.3'>(10.5.3)</a></div><p >if it is a union, at least one of its non-static data members is
