--- a/class.copy.assign.html
+++ b/class.copy.assign.html
@@ -155,9 +155,9 @@ to assign to an object of its class type)
 or when it is explicitly defaulted after its first declaration.
 The implicitly-defined copy/move assignment operator is <span class='texttt'>constexpr</span> if
 </p><ul class='itemize'><li id='10.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#10.1'>(10.1)</a></div><p ><span class='texttt'>X</span> is a literal type, and</p></li><li id='10.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#10.2'>(10.2)</a></div><p >the assignment operator selected to copy/move each direct base class subobject
-is a <span class='texttt'>constexpr</span> function, and</p></li><li id='10.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#10.3'>(10.3)</a></div><p >for each non-static data member of <span class='texttt'>X</span> that is of class type (or array
+is a constexpr function, and</p></li><li id='10.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#10.3'>(10.3)</a></div><p >for each non-static data member of <span class='texttt'>X</span> that is of class type (or array
 thereof), the assignment operator selected to copy/move that member is a
-<span class='texttt'>constexpr</span> function.
+constexpr function.
 </p></li></ul></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><p >Before the defaulted copy/move assignment operator for a class is
 implicitly defined,
 all non-user-provided copy/move assignment operators for
