--- a/class.ctor.html
+++ b/class.ctor.html
@@ -102,7 +102,7 @@ constructor for that class with no
 If that user-written default constructor would be ill-formed,
 the program is ill-formed.
 If that user-written default constructor would satisfy the requirements
-of a <span class='texttt'>constexpr</span> constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>), the implicitly-defined
+of a constexpr constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>), the implicitly-defined
 default constructor is <span class='texttt'>constexpr</span>.
 Before the defaulted default constructor for a class is
 implicitly defined,
