--- a/expr.html
+++ b/expr.html
@@ -2988,17 +2988,17 @@ during translation.<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><pre class='bnf'><a 
 <a class='hidden_link' href='#def:expression,core_constant' id='def:expression,core_constant'><i>core constant expression</i></a>
 unless the evaluation of <span class='texttt'>e</span>, following the rules of the abstract
 machine (<a href='intro.execution'>[intro.execution]</a>), would evaluate one of the following expressions:</p><ul class='itemize'><li id='const-2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.1'>(2.1)</a></div><p ><span class='texttt'>this</span> (<a href='expr.prim.this'>[expr.prim.this]</a>), except in a <span class='texttt'>constexpr</span>
-function or a <span class='texttt'>constexpr</span> constructor that is being evaluated as part
+function or a constexpr constructor that is being evaluated as part
 of <span class='texttt'>e</span>;</p></li><li id='const-2.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.2'>(2.2)</a></div><p >an invocation of a function other than
-a <span class='texttt'>constexpr</span> constructor for a literal class,
-a <span class='texttt'>constexpr</span> function,
+a constexpr constructor for a literal class,
+a constexpr function,
 or an implicit invocation of a trivial destructor (<a href='class.dtor'>[class.dtor]</a>)
 [&nbsp;<i>Note:</i> Overload resolution (<a href='over.match'>[over.match]</a>)
-is applied as usual <i>&nbsp;—&nbsp;end note</i>&nbsp;];</p></li><li id='const-2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.3'>(2.3)</a></div><p >an invocation of an undefined <span class='texttt'>constexpr</span> function or an
-undefined <span class='texttt'>constexpr</span> constructor;</p></li><li id='const-2.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.4'>(2.4)</a></div><p >an invocation of an instantiated <span class='texttt'>constexpr</span> function or
-<span class='texttt'>constexpr</span> constructor that fails to satisfy the requirements
-for a <span class='texttt'>constexpr</span> function or
-<span class='texttt'>constexpr</span> constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>);</p></li><li id='const-2.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.5'>(2.5)</a></div><p >an expression that would exceed the implementation-defined
+is applied as usual <i>&nbsp;—&nbsp;end note</i>&nbsp;];</p></li><li id='const-2.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.3'>(2.3)</a></div><p >an invocation of an undefined constexpr function or an
+undefined constexpr constructor;</p></li><li id='const-2.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.4'>(2.4)</a></div><p >an invocation of an instantiated constexpr function or
+constexpr constructor that fails to satisfy the requirements
+for a constexpr function or
+constexpr constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>);</p></li><li id='const-2.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.5'>(2.5)</a></div><p >an expression that would exceed the implementation-defined
 limits (see Annex <a href='implimits'>[implimits]</a>);</p></li><li id='const-2.6'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#const-2.6'>(2.6)</a></div><p >an operation that would have undefined behavior
 as specified in Clauses <a href='intro'>[intro]</a> through <a href='cpp'>[cpp]</a>
 of this International Standard [&nbsp;<i>Note:</i> including,
