--- a/implimits.html
+++ b/implimits.html
@@ -71,7 +71,7 @@ accessible or not [16&nbsp;384].
 </p></li><li id='2.35'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.35'>(2.35)</a></div><p ><i ><a href='dcl.init#nt:initializer-clause'>initializer-clauses</a></i> in one <i ><a href='dcl.init#nt:braced-init-list'>braced-init-list</a></i> [16&nbsp;384].
 </p></li><li id='2.36'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.36'>(2.36)</a></div><p >Scope qualifications of one identifier [256].
 </p></li><li id='2.37'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.37'>(2.37)</a></div><p >Nested external specifications [1&nbsp;024].
-</p></li><li id='2.38'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.38'>(2.38)</a></div><p >Recursive <span class='texttt'>constexpr</span> function invocations [512].
+</p></li><li id='2.38'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.38'>(2.38)</a></div><p >Recursive constexpr function invocations [512].
 </p></li><li id='2.39'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.39'>(2.39)</a></div><p >Full-expressions evaluated within a core constant expression [1&nbsp;048&nbsp;576].
 </p></li><li id='2.40'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.40'>(2.40)</a></div><p >Template arguments in a template declaration [1&nbsp;024].
 </p></li><li id='2.41'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.41'>(2.41)</a></div><p >Recursively nested template instantiations, including substitution
