--- a/istream.iterator.cons.html
+++ b/istream.iterator.cons.html
@@ -3,7 +3,7 @@
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Constructs the end-of-stream iterator.
 If <span class='texttt'>is_trivially_default_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span>,
-then this constructor is a <span class='texttt'>constexpr</span> constructor.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>in_stream == 0</span>.
+then this constructor is a constexpr constructor.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Postconditions:</i> <span class='texttt'>in_stream == 0</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='istream_iterator,constructor'></a></span><code class='itemdecl'>
 istream_iterator(istream_type&amp; s);
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
