--- a/library.html
+++ b/library.html
@@ -1561,7 +1561,7 @@ For instance, an implementation may add parameters with default values,
 or replace a member function with default arguments
 with two or more member functions with equivalent behavior,
 or add additional signatures for a member function name.
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div id='constexpr.functions'><h4 ><a class='secnum' href='#constexpr.functions' style='min-width:118pt'>17.5.5.6</a> <span class='texttt'>constexpr</span> functions and constructors <a class='abbr_ref' href='constexpr.functions'>[constexpr.functions]</a></h4><div class='para' id='constexpr.functions-1'><div class='marginalizedparent'><a class='marginalized' href='#constexpr.functions-1'>1</a></div><p >This standard explicitly requires that certain standard library functions are
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div id='constexpr.functions'><h4 ><a class='secnum' href='#constexpr.functions' style='min-width:118pt'>17.5.5.6</a> Constexpr functions and constructors <a class='abbr_ref' href='constexpr.functions'>[constexpr.functions]</a></h4><div class='para' id='constexpr.functions-1'><div class='marginalizedparent'><a class='marginalized' href='#constexpr.functions-1'>1</a></div><p >This standard explicitly requires that certain standard library functions are
 <span class='texttt'>constexpr</span> (<a href='dcl.constexpr'>[dcl.constexpr]</a>). An implementation shall not declare
 any standard library function signature as <span class='texttt'>constexpr</span> except for those where
 it is explicitly required.
