--- a/optional.ctor.html
+++ b/optional.ctor.html
@@ -4,7 +4,7 @@ constexpr optional(nullopt_t) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Postconditions:</i>
 <span class='texttt'>*this</span> does not contain a value.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 No contained value is initialized.
-For every object type <span class='texttt'>T</span> these constructors shall be <span class='texttt'>constexpr</span> constructors (<a href='dcl.constexpr'>[dcl.constexpr]</a>).
+For every object type <span class='texttt'>T</span> these constructors shall be constexpr constructors (<a href='dcl.constexpr'>[dcl.constexpr]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='optional,constructor'></a></span><code class='itemdecl'>
 optional(const optional&amp; rhs);
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
@@ -32,7 +32,7 @@ template &lt;class... Args&gt; constexpr explicit optional(in_place_t, Args&amp;
 Initializes the contained value as if direct-non-list-initializing an object of type <span class='texttt'>T</span> with the arguments <span class='texttt'>std::forward&lt;Args&gt;(args)...</span>.</p></div></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><div class='itemdescr'><p ><i>Postconditions:</i>
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='12'><div class='marginalizedparent'><a class='marginalized' href='#12'>12</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Any exception thrown by the selected constructor of <span class='texttt'>T</span>.</p></div></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-If <span class='texttt'>T</span>'s constructor selected for the initialization is a <span class='texttt'>constexpr</span> constructor, this constructor shall be a <span class='texttt'>constexpr</span> constructor.
+If <span class='texttt'>T</span>'s constructor selected for the initialization is a constexpr constructor, this constructor shall be a <span class='texttt'>constexpr</span> constructor.
 This constructor shall not participate in overload resolution
 unless <span class='texttt'>is_constructible_v&lt;T, Args...&gt;</span> is <span class='texttt'>true</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='optional,constructor'></a></span><code class='itemdecl'>
@@ -43,7 +43,7 @@ Initializes the contained value as if direct-non-list-initializing an object of 
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='16'><div class='marginalizedparent'><a class='marginalized' href='#16'>16</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Any exception thrown by the selected constructor of <span class='texttt'>T</span>.</p></div></div><div class='para' id='17'><div class='marginalizedparent'><a class='marginalized' href='#17'>17</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 This constructor shall not participate in overload resolution unless <span class='texttt'>is_constructible_v&lt;T, initializer_list&lt;U&gt;&amp;, Args&amp;&amp;...&gt;</span> is <span class='texttt'>true</span>.
-If <span class='texttt'>T</span>'s constructor selected for the initialization is a <span class='texttt'>constexpr</span> constructor, this constructor shall be a <span class='texttt'>constexpr</span> constructor.
+If <span class='texttt'>T</span>'s constructor selected for the initialization is a constexpr constructor, this constructor shall be a <span class='texttt'>constexpr</span> constructor.
 </p></div></div><div class='para' id='18'><div class='marginalizedparent'><a class='marginalized' href='#18'>18</a></div><p >[&nbsp;<i>Note:</i>
 The following constructors are conditionally specified as explicit.
 This is typically implemented by declaring two such constructors,
@@ -56,8 +56,8 @@ Initializes the contained value as if direct-non-list-initializing
 an object of type <span class='texttt'>T</span> with the expression <span class='texttt'>std::forward&lt;U&gt;(v)</span>.</p></div></div><div class='para' id='20'><div class='marginalizedparent'><a class='marginalized' href='#20'>20</a></div><div class='itemdescr'><p ><i>Postconditions:</i>
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='21'><div class='marginalizedparent'><a class='marginalized' href='#21'>21</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Any exception thrown by the selected constructor of <span class='texttt'>T</span>.</p></div></div><div class='para' id='22'><div class='marginalizedparent'><a class='marginalized' href='#22'>22</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-If <span class='texttt'>T</span>'s selected constructor is a <span class='texttt'>constexpr</span> constructor,
-this constructor shall be a <span class='texttt'>constexpr</span> constructor.
+If <span class='texttt'>T</span>'s selected constructor is a constexpr constructor,
+this constructor shall be a constexpr constructor.
 This constructor shall not participate in overload resolution unless
 <span class='texttt'>is_constructible_v&lt;T, U&amp;&amp;&gt;</span> is <span class='texttt'>true</span>,
 <span class='texttt'>is_same_v&lt;U, in_place_t&gt;</span> is <span class='texttt'>false</span>, and
