--- a/optional.html
+++ b/optional.html
@@ -143,7 +143,7 @@ constexpr optional(nullopt_t) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='ctor-1'><div class='marginalizedparent'><a class='marginalized' href='#ctor-1'>1</a></div><div class='itemdescr'><p ><i>Postconditions:</i>
 <span class='texttt'>*this</span> does not contain a value.</p></div></div><div class='para' id='ctor-2'><div class='marginalizedparent'><a class='marginalized' href='#ctor-2'>2</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 No contained value is initialized.
-For every object type <span class='texttt'>T</span> these constructors shall be <span class='texttt'>constexpr</span> constructors (<a href='dcl.constexpr'>[dcl.constexpr]</a>).
+For every object type <span class='texttt'>T</span> these constructors shall be constexpr constructors (<a href='dcl.constexpr'>[dcl.constexpr]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='optional,constructor'></a></span><code class='itemdecl'>
 optional(const optional&amp; rhs);
 </code></p><div class='itemdescr'></div><div class='para' id='ctor-3'><div class='marginalizedparent'><a class='marginalized' href='#ctor-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
@@ -171,7 +171,7 @@ template &lt;class... Args&gt; constexpr explicit optional(in_place_t, Args&amp;
 Initializes the contained value as if direct-non-list-initializing an object of type <span class='texttt'>T</span> with the arguments <span class='texttt'>std::forward&lt;Args&gt;(args)...</span>.</p></div></div><div class='para' id='ctor-11'><div class='marginalizedparent'><a class='marginalized' href='#ctor-11'>11</a></div><div class='itemdescr'><p ><i>Postconditions:</i>
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='ctor-12'><div class='marginalizedparent'><a class='marginalized' href='#ctor-12'>12</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Any exception thrown by the selected constructor of <span class='texttt'>T</span>.</p></div></div><div class='para' id='ctor-13'><div class='marginalizedparent'><a class='marginalized' href='#ctor-13'>13</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-If <span class='texttt'>T</span>'s constructor selected for the initialization is a <span class='texttt'>constexpr</span> constructor, this constructor shall be a <span class='texttt'>constexpr</span> constructor.
+If <span class='texttt'>T</span>'s constructor selected for the initialization is a constexpr constructor, this constructor shall be a <span class='texttt'>constexpr</span> constructor.
 This constructor shall not participate in overload resolution
 unless <span class='texttt'>is_constructible_v&lt;T, Args...&gt;</span> is <span class='texttt'>true</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='optional,constructor'></a></span><code class='itemdecl'>
@@ -182,7 +182,7 @@ Initializes the contained value as if direct-non-list-initializing an object of 
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='ctor-16'><div class='marginalizedparent'><a class='marginalized' href='#ctor-16'>16</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Any exception thrown by the selected constructor of <span class='texttt'>T</span>.</p></div></div><div class='para' id='ctor-17'><div class='marginalizedparent'><a class='marginalized' href='#ctor-17'>17</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 This constructor shall not participate in overload resolution unless <span class='texttt'>is_constructible_v&lt;T, initializer_list&lt;U&gt;&amp;, Args&amp;&amp;...&gt;</span> is <span class='texttt'>true</span>.
-If <span class='texttt'>T</span>'s constructor selected for the initialization is a <span class='texttt'>constexpr</span> constructor, this constructor shall be a <span class='texttt'>constexpr</span> constructor.
+If <span class='texttt'>T</span>'s constructor selected for the initialization is a constexpr constructor, this constructor shall be a <span class='texttt'>constexpr</span> constructor.
 </p></div></div><div class='para' id='ctor-18'><div class='marginalizedparent'><a class='marginalized' href='#ctor-18'>18</a></div><p >[&nbsp;<i>Note:</i>
 The following constructors are conditionally specified as explicit.
 This is typically implemented by declaring two such constructors,
@@ -195,8 +195,8 @@ Initializes the contained value as if direct-non-list-initializing
 an object of type <span class='texttt'>T</span> with the expression <span class='texttt'>std::forward&lt;U&gt;(v)</span>.</p></div></div><div class='para' id='ctor-20'><div class='marginalizedparent'><a class='marginalized' href='#ctor-20'>20</a></div><div class='itemdescr'><p ><i>Postconditions:</i>
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='ctor-21'><div class='marginalizedparent'><a class='marginalized' href='#ctor-21'>21</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Any exception thrown by the selected constructor of <span class='texttt'>T</span>.</p></div></div><div class='para' id='ctor-22'><div class='marginalizedparent'><a class='marginalized' href='#ctor-22'>22</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-If <span class='texttt'>T</span>'s selected constructor is a <span class='texttt'>constexpr</span> constructor,
-this constructor shall be a <span class='texttt'>constexpr</span> constructor.
+If <span class='texttt'>T</span>'s selected constructor is a constexpr constructor,
+this constructor shall be a constexpr constructor.
 This constructor shall not participate in overload resolution unless
 <span class='texttt'>is_constructible_v&lt;T, U&amp;&amp;&gt;</span> is <span class='texttt'>true</span>,
 <span class='texttt'>is_same_v&lt;U, in_place_t&gt;</span> is <span class='texttt'>false</span>, and
@@ -579,7 +579,7 @@ constexpr T* operator-&gt;();
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='observe-2'><div class='marginalizedparent'><a class='marginalized' href='#observe-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>val</span>.</p></div></div><div class='para' id='observe-3'><div class='marginalizedparent'><a class='marginalized' href='#observe-3'>3</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Nothing.</p></div></div><div class='para' id='observe-4'><div class='marginalizedparent'><a class='marginalized' href='#observe-4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-These functions shall be <span class='texttt'>constexpr</span> functions.
+These functions shall be constexpr functions.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator*,optional'></a></span><span class='indexparent'><a class='index' id='optional,operator*'></a></span><code class='itemdecl'>
 constexpr const T&amp; operator*() const&amp;;
 constexpr T&amp; operator*() &amp;;
@@ -587,7 +587,7 @@ constexpr T&amp; operator*() &amp;;
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='observe-6'><div class='marginalizedparent'><a class='marginalized' href='#observe-6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>*val</span>.</p></div></div><div class='para' id='observe-7'><div class='marginalizedparent'><a class='marginalized' href='#observe-7'>7</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Nothing.</p></div></div><div class='para' id='observe-8'><div class='marginalizedparent'><a class='marginalized' href='#observe-8'>8</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-These functions shall be <span class='texttt'>constexpr</span> functions.
+These functions shall be constexpr functions.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator*,optional'></a></span><span class='indexparent'><a class='index' id='optional,operator*'></a></span><code class='itemdecl'>
 constexpr T&amp;&amp; operator*() &amp;&amp;;
 constexpr const T&amp;&amp; operator*() const&amp;&amp;;
@@ -598,10 +598,10 @@ Equivalent to: <span class='texttt'>return std::move(*val);</span>
 constexpr explicit operator bool() const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='observe-11'><div class='marginalizedparent'><a class='marginalized' href='#observe-11'>11</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>true</span> if and only if <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='observe-12'><div class='marginalizedparent'><a class='marginalized' href='#observe-12'>12</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-This function shall be a <span class='texttt'>constexpr</span> function.
+This function shall be a constexpr function.
 </p></div></div><p ><span class='indexparent'><a class='index' id='has_value,optional'></a></span><span class='indexparent'><a class='index' id='optional,has_value'></a></span><code class='itemdecl'>
 constexpr bool has_value() const noexcept;
-</code></p><div class='itemdescr'></div><div class='para' id='observe-13'><div class='marginalizedparent'><a class='marginalized' href='#observe-13'>13</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>true</span> if and only if <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='observe-14'><div class='marginalizedparent'><a class='marginalized' href='#observe-14'>14</a></div><div class='itemdescr'><p ><i>Remarks:</i> This function shall be a <span class='texttt'>constexpr</span> function.
+</code></p><div class='itemdescr'></div><div class='para' id='observe-13'><div class='marginalizedparent'><a class='marginalized' href='#observe-13'>13</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>true</span> if and only if <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='observe-14'><div class='marginalizedparent'><a class='marginalized' href='#observe-14'>14</a></div><div class='itemdescr'><p ><i>Remarks:</i> This function shall be a constexpr function.
 </p></div></div><p ><span class='indexparent'><a class='index' id='value,optional'></a></span><span class='indexparent'><a class='index' id='optional,value'></a></span><code class='itemdecl'>
 constexpr const T&amp; value() const&amp;;
 constexpr T&amp; value() &amp;;
@@ -666,7 +666,7 @@ its result shall be convertible to <span class='texttt'>bool</span>.
 If <span class='texttt'>bool(x) != bool(y)</span>, <span class='texttt'>false</span>; otherwise if <span class='texttt'>bool(x) == false</span>, <span class='texttt'>true</span>; otherwise <span class='texttt'>*x == *y</span>.</p></div></div><div class='para' id='relops-3'><div class='marginalizedparent'><a class='marginalized' href='#relops-3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 Specializations of this function template
 for which <span class='texttt'>*x == *y</span> is a core constant expression
-shall be <span class='texttt'>constexpr</span> functions.
+shall be constexpr functions.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator!=,optional'></a></span><span class='indexparent'><a class='index' id='optional,operator!='></a></span><code class='itemdecl'>
 template &lt;class T&gt; constexpr bool operator!=(const optional&lt;T&gt;&amp; x, const optional&lt;T&gt;&amp; y);
 </code></p><div class='itemdescr'></div><div class='para' id='relops-4'><div class='marginalizedparent'><a class='marginalized' href='#relops-4'>4</a></div><div class='itemdescr'><p ><i>Requires:</i>
@@ -688,7 +688,7 @@ otherwise, if <span class='texttt'>!x</span>, <span class='texttt'>true</span>;
 otherwise <span class='texttt'>*x &lt; *y</span>.</p></div></div><div class='para' id='relops-9'><div class='marginalizedparent'><a class='marginalized' href='#relops-9'>9</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 Specializations of this function template
 for which <span class='texttt'>*x &lt; *y</span> is a core constant expression
-shall be <span class='texttt'>constexpr</span> functions.
+shall be constexpr functions.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator>,optional'></a></span><span class='indexparent'><a class='index' id='optional,operator>'></a></span><code class='itemdecl'>
 template &lt;class T&gt; constexpr bool operator&gt;(const optional&lt;T&gt;&amp; x, const optional&lt;T&gt;&amp; y);
 </code></p><div class='itemdescr'></div><div class='para' id='relops-10'><div class='marginalizedparent'><a class='marginalized' href='#relops-10'>10</a></div><div class='itemdescr'><p ><i>Requires:</i>
