--- a/optional.observe.html
+++ b/optional.observe.html
@@ -5,7 +5,7 @@ constexpr T* operator-&gt;();
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>val</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Nothing.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-These functions shall be <span class='texttt'>constexpr</span> functions.
+These functions shall be constexpr functions.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator*,optional'></a></span><span class='indexparent'><a class='index' id='optional,operator*'></a></span><code class='itemdecl'>
 constexpr const T&amp; operator*() const&amp;;
 constexpr T&amp; operator*() &amp;;
@@ -13,7 +13,7 @@ constexpr T&amp; operator*() &amp;;
 <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>*val</span>.</p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Nothing.</p></div></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-These functions shall be <span class='texttt'>constexpr</span> functions.
+These functions shall be constexpr functions.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator*,optional'></a></span><span class='indexparent'><a class='index' id='optional,operator*'></a></span><code class='itemdecl'>
 constexpr T&amp;&amp; operator*() &amp;&amp;;
 constexpr const T&amp;&amp; operator*() const&amp;&amp;;
@@ -24,10 +24,10 @@ Equivalent to: <span class='texttt'>return std::move(*val);</span>
 constexpr explicit operator bool() const noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>true</span> if and only if <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='12'><div class='marginalizedparent'><a class='marginalized' href='#12'>12</a></div><div class='itemdescr'><p ><i>Remarks:</i>
-This function shall be a <span class='texttt'>constexpr</span> function.
+This function shall be a constexpr function.
 </p></div></div><p ><span class='indexparent'><a class='index' id='has_value,optional'></a></span><span class='indexparent'><a class='index' id='optional,has_value'></a></span><code class='itemdecl'>
 constexpr bool has_value() const noexcept;
-</code></p><div class='itemdescr'></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>true</span> if and only if <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><div class='itemdescr'><p ><i>Remarks:</i> This function shall be a <span class='texttt'>constexpr</span> function.
+</code></p><div class='itemdescr'></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>true</span> if and only if <span class='texttt'>*this</span> contains a value.</p></div></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><div class='itemdescr'><p ><i>Remarks:</i> This function shall be a constexpr function.
 </p></div></div><p ><span class='indexparent'><a class='index' id='value,optional'></a></span><span class='indexparent'><a class='index' id='optional,value'></a></span><code class='itemdecl'>
 constexpr const T&amp; value() const&amp;;
 constexpr T&amp; value() &amp;;
