--- a/optional.relops.html
+++ b/optional.relops.html
@@ -7,7 +7,7 @@ its result shall be convertible to <span class='texttt'>bool</span>.
 If <span class='texttt'>bool(x) != bool(y)</span>, <span class='texttt'>false</span>; otherwise if <span class='texttt'>bool(x) == false</span>, <span class='texttt'>true</span>; otherwise <span class='texttt'>*x == *y</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 Specializations of this function template
 for which <span class='texttt'>*x == *y</span> is a core constant expression
-shall be <span class='texttt'>constexpr</span> functions.
+shall be constexpr functions.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator!=,optional'></a></span><span class='indexparent'><a class='index' id='optional,operator!='></a></span><code class='itemdecl'>
 template &lt;class T&gt; constexpr bool operator!=(const optional&lt;T&gt;&amp; x, const optional&lt;T&gt;&amp; y);
 </code></p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Requires:</i>
@@ -29,7 +29,7 @@ otherwise, if <span class='texttt'>!x</span>, <span class='texttt'>true</span>;
 otherwise <span class='texttt'>*x &lt; *y</span>.</p></div></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 Specializations of this function template
 for which <span class='texttt'>*x &lt; *y</span> is a core constant expression
-shall be <span class='texttt'>constexpr</span> functions.
+shall be constexpr functions.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator>,optional'></a></span><span class='indexparent'><a class='index' id='optional,operator>'></a></span><code class='itemdecl'>
 template &lt;class T&gt; constexpr bool operator&gt;(const optional&lt;T&gt;&amp; x, const optional&lt;T&gt;&amp; y);
 </code></p><div class='itemdescr'></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><div class='itemdescr'><p ><i>Requires:</i>
