--- a/pairs.html
+++ b/pairs.html
@@ -33,9 +33,9 @@ namespace std {
 </pre><div class='para' id='pair-1'><div class='marginalizedparent'><a class='marginalized' href='#pair-1'>1</a></div><p >Constructors and member functions of <span class='texttt'>pair</span> shall not throw exceptions unless one of
 the element-wise operations specified to be called for that operation
 throws an exception.</p></div><div class='para' id='pair-2'><div class='marginalizedparent'><a class='marginalized' href='#pair-2'>2</a></div><p >The defaulted move and copy constructor, respectively, of pair shall
-be a <span class='texttt'>constexpr</span> function if and only if all required element-wise
+be a constexpr function if and only if all required element-wise
 initializations for copy and move, respectively, would satisfy the
-requirements for a <span class='texttt'>constexpr</span> function.</p><p ><span class='indexparent'><a class='index' id='pair,constructor'></a></span><code class='itemdecl'>
+requirements for a constexpr function.</p><p ><span class='indexparent'><a class='index' id='pair,constructor'></a></span><code class='itemdecl'>
 <i><span class='texttt'>EXPLICIT</span></i> constexpr pair();
 </code></p></div><div class='itemdescr'></div><div class='para' id='pair-3'><div class='marginalizedparent'><a class='marginalized' href='#pair-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Value-initializes <span class='texttt'>first</span> and <span class='texttt'>second</span>.</p></div></div><div class='para' id='pair-4'><div class='marginalizedparent'><a class='marginalized' href='#pair-4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i>
