--- a/special.html
+++ b/special.html
@@ -136,7 +136,7 @@ constructor for that class with no
 If that user-written default constructor would be ill-formed,
 the program is ill-formed.
 If that user-written default constructor would satisfy the requirements
-of a <span class='texttt'>constexpr</span> constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>), the implicitly-defined
+of a constexpr constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>), the implicitly-defined
 default constructor is <span class='texttt'>constexpr</span>.
 Before the defaulted default constructor for a class is
 implicitly defined,
@@ -1858,7 +1858,7 @@ The copy/move constructor is implicitly defined even if the implementation elide
 its odr-use (<a href='basic.def.odr'>[basic.def.odr]</a>, <a href='class.temporary'>[class.temporary]</a>).
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 If the implicitly-defined constructor would satisfy the requirements of a
-<span class='texttt'>constexpr</span> constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>), the implicitly-defined
+constexpr constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>), the implicitly-defined
 constructor is <span class='texttt'>constexpr</span>.</p></div><div class='para' id='class.copy.ctor-13'><div class='marginalizedparent'><a class='marginalized' href='#class.copy.ctor-13'>13</a></div><p >Before the defaulted copy/move constructor for a class is
 implicitly defined,
 all non-user-provided copy/move constructors for its
@@ -2042,9 +2042,9 @@ to assign to an object of its class type)
 or when it is explicitly defaulted after its first declaration.
 The implicitly-defined copy/move assignment operator is <span class='texttt'>constexpr</span> if
 </p><ul class='itemize'><li id='class.copy.assign-10.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#class.copy.assign-10.1'>(10.1)</a></div><p ><span class='texttt'>X</span> is a literal type, and</p></li><li id='class.copy.assign-10.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#class.copy.assign-10.2'>(10.2)</a></div><p >the assignment operator selected to copy/move each direct base class subobject
-is a <span class='texttt'>constexpr</span> function, and</p></li><li id='class.copy.assign-10.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#class.copy.assign-10.3'>(10.3)</a></div><p >for each non-static data member of <span class='texttt'>X</span> that is of class type (or array
+is a constexpr function, and</p></li><li id='class.copy.assign-10.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#class.copy.assign-10.3'>(10.3)</a></div><p >for each non-static data member of <span class='texttt'>X</span> that is of class type (or array
 thereof), the assignment operator selected to copy/move that member is a
-<span class='texttt'>constexpr</span> function.
+constexpr function.
 </p></li></ul></div><div class='para' id='class.copy.assign-11'><div class='marginalizedparent'><a class='marginalized' href='#class.copy.assign-11'>11</a></div><p >Before the defaulted copy/move assignment operator for a class is
 implicitly defined,
 all non-user-provided copy/move assignment operators for
