--- a/temp.res.html
+++ b/temp.res.html
@@ -163,7 +163,7 @@ instantiation uses
   </p><ul class='itemize'><li id='8.4.4.1'><div class='marginalizedparent' style='left:-11em'><a class='marginalized' href='#8.4.4.1'>(8.4.4.1)</a></div><p >the value of a <span class='texttt'>const</span> object of integral or unscoped enumeration type or
   </p></li><li id='8.4.4.2'><div class='marginalizedparent' style='left:-11em'><a class='marginalized' href='#8.4.4.2'>(8.4.4.2)</a></div><p >the value of a <span class='texttt'>constexpr</span> object or
   </p></li><li id='8.4.4.3'><div class='marginalizedparent' style='left:-11em'><a class='marginalized' href='#8.4.4.3'>(8.4.4.3)</a></div><p >the value of a reference or
-  </p></li><li id='8.4.4.4'><div class='marginalizedparent' style='left:-11em'><a class='marginalized' href='#8.4.4.4'>(8.4.4.4)</a></div><p >the definition of a <span class='texttt'>constexpr</span> function,
+  </p></li><li id='8.4.4.4'><div class='marginalizedparent' style='left:-11em'><a class='marginalized' href='#8.4.4.4'>(8.4.4.4)</a></div><p >the definition of a constexpr function,
   </p></li></ul><p >and that entity was not defined when the template was defined, or</p></li><li id='8.4.5'><div class='marginalizedparent' style='left:-9em'><a class='marginalized' href='#8.4.5'>(8.4.5)</a></div><p >a class template specialization or variable template specialization that
 is specified by a non-dependent <i ><a href='temp.names#nt:simple-template-id'>simple-template-id</a></i> is used by
 the template, and either it is instantiated from a partial specialization that
