--- a/time.duration.html
+++ b/time.duration.html
@@ -47,9 +47,9 @@ private:
 </pre></div><div class='itemdescr'></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Requires:</i> <span class='texttt'>Rep</span> shall be an arithmetic type or a class emulating an arithmetic type.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i> If <span class='texttt'>duration</span> is instantiated with a <span class='texttt'>duration</span> type for the template
 argument <span class='texttt'>Rep</span>, the program is ill-formed.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i> If <span class='texttt'>Period</span> is not a specialization of <span class='texttt'>ratio</span>, the program is ill-formed.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i> If <span class='texttt'>Period::num</span> is not positive, the program is ill-formed.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Requires:</i> Members of <span class='texttt'>duration</span> shall not throw exceptions other than
 those thrown by the indicated operations on their representations.</p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Remarks:</i> The defaulted copy constructor of duration shall be a
-<span class='texttt'>constexpr</span> function if and only if the required initialization
+constexpr function if and only if the required initialization
 of the member <span class='texttt'>rep_</span> for copy and move, respectively, would
-satisfy the requirements for a <span class='texttt'>constexpr</span> function.
+satisfy the requirements for a constexpr function.
 </p></div></div><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 duration&lt;long, ratio&lt;60&gt;&gt; d0;       <span class='comment'>// holds a count of minutes using a <span class='texttt'>long</span>
