--- a/tuple.html
+++ b/tuple.html
@@ -160,11 +160,11 @@ namespace std {
 }
 </pre><div id='cnstr'><h4 ><a class='secnum' href='#cnstr' style='min-width:118pt'>20.5.3.1</a> Construction <a class='abbr_ref' href='tuple.cnstr'>[tuple.cnstr]</a></h4><div class='para' id='cnstr-1'><div class='marginalizedparent'><a class='marginalized' href='#cnstr-1'>1</a></div><p >For each <span class='texttt'>tuple</span> constructor, an exception is thrown only if the construction of
 one of the types in <span class='texttt'>Types</span> throws an exception.</p></div><div class='para' id='cnstr-2'><div class='marginalizedparent'><a class='marginalized' href='#cnstr-2'>2</a></div><p >The defaulted move and copy constructor, respectively, of
-<span class='texttt'>tuple</span> shall be a <span class='texttt'>constexpr</span> function if and only if all
+<span class='texttt'>tuple</span> shall be a constexpr function if and only if all
 required element-wise initializations for copy and move, respectively,
-would satisfy the requirements for a <span class='texttt'>constexpr</span> function. The
+would satisfy the requirements for a constexpr function. The
 defaulted move and copy constructor of <span class='texttt'>tuple&lt;&gt;</span> shall be
-<span class='texttt'>constexpr</span> functions.</p></div><div class='para' id='cnstr-3'><div class='marginalizedparent'><a class='marginalized' href='#cnstr-3'>3</a></div><p >In the constructor descriptions that follow, let <span class='math'><span class='mathalpha'>i</span></span> be in the range
+constexpr functions.</p></div><div class='para' id='cnstr-3'><div class='marginalizedparent'><a class='marginalized' href='#cnstr-3'>3</a></div><p >In the constructor descriptions that follow, let <span class='math'><span class='mathalpha'>i</span></span> be in the range
 <span class='texttt'>[0, sizeof...(Types))</span> in order, <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span>
 be the <span class='math'><span class='mathalpha'>i</span><sup ><span class='text'>th</span></sup></span> type in <span class='texttt'>Types</span>, and
 <span class='texttt'>U</span><span class='math'><sub ><span class='mathalpha'>i</span></sub></span> be the <span class='math'><span class='mathalpha'>i</span><sup ><span class='text'>th</span></sup></span> type in a template parameter pack named <span class='texttt'>UTypes</span>, where indexing
