--- a/basic.start.html
+++ b/basic.start.html
@@ -55,7 +55,7 @@ the effect is equivalent to a <span class='texttt'>return</span> with operand <s
 are initialized as a consequence of program initiation. Variables with
 thread storage duration are initialized as a consequence of thread execution.
 Within each of these phases of initiation, initialization occurs as follows.</p></div><div class='para' id='static-2'><div class='marginalizedparent'><a class='marginalized' href='#static-2'>2</a></div><p ><span class='indexparent'><a class='index' id='initialization,static_object'></a></span><span class='indexparent'><a class='index' id='initialization,constant'></a></span>A <a class='hidden_link' href='#def:constant_initializer' id='def:constant_initializer'><i>constant initializer</i></a> for an object <span class='texttt'>o</span> is an expression that is a
-constant expression, except that it may also invoke <span class='texttt'>constexpr</span> constructors
+constant expression, except that it may also invoke constexpr constructors
 for <span class='texttt'>o</span> and its subobjects even if those objects are of non-literal class
 types. [&nbsp;<i>Note:</i> Such a class may have a non-trivial destructor. <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 <a class='hidden_link' href='#def:constant_initialization' id='def:constant_initialization'><i>Constant initialization</i></a> is performed:
