--- a/class.copy.ctor.html
+++ b/class.copy.ctor.html
@@ -166,7 +166,7 @@ The copy/move constructor is implicitly defined even if the implementation elide
 its odr-use (<a href='basic.def.odr'>[basic.def.odr]</a>, <a href='class.temporary'>[class.temporary]</a>).
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]
 If the implicitly-defined constructor would satisfy the requirements of a
-<span class='texttt'>constexpr</span> constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>), the implicitly-defined
+constexpr constructor (<a href='dcl.constexpr'>[dcl.constexpr]</a>), the implicitly-defined
 constructor is <span class='texttt'>constexpr</span>.</p></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><p >Before the defaulted copy/move constructor for a class is
 implicitly defined,
 all non-user-provided copy/move constructors for its
