--- a/dcl.constexpr.html
+++ b/dcl.constexpr.html
@@ -41,7 +41,7 @@ function to be a <a class='hidden_link' href='#def:specifier,constexpr,function'
 a constructor declaration declares that constructor to be a
 <a class='hidden_link' href='#def:specifier,constexpr,constructor' id='def:specifier,constexpr,constructor'><i>constexpr constructor</i></a>.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p ><span class='indexparent'><a class='index' id='specifier,constexpr,function'></a></span>
 <span class='indexparent'><a class='index' id='constexpr_function'></a></span>
-The definition of a <span class='texttt'>constexpr</span> function shall satisfy the following
+The definition of a constexpr function shall satisfy the following
 requirements:</p><ul class='itemize'><li id='3.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#3.1'>(3.1)</a></div><p >it shall not be virtual (<a href='class.virtual'>[class.virtual]</a>);</p></li><li id='3.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#3.2'>(3.2)</a></div><p >for a defaulted copy/move assignment, the class of which it is a member
 shall not have a mutable subobject that is a variant member;</p></li><li id='3.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#3.3'>(3.3)</a></div><p >its return type shall be a literal type;</p></li><li id='3.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#3.4'>(3.4)</a></div><p >each of its parameter types shall be a literal type;</p></li><li id='3.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#3.5'>(3.5)</a></div><p >its <i ><a href='dcl.fct.def.general#nt:function-body'>function-body</a></i> shall be
 <span class='texttt'>= delete</span>, <span class='texttt'>= default</span>, or
@@ -80,7 +80,7 @@ constexpr int prev(int x)
   while (--n &gt; 0) r *= x;
   return r;
 }
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='specifier,constexpr,constructor'></a></span>The definition of a <span class='texttt'>constexpr</span> constructor shall satisfy the
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p ><span class='indexparent'><a class='index' id='specifier,constexpr,constructor'></a></span>The definition of a constexpr constructor shall satisfy the
 following requirements:
 </p><ul class='itemize'><li id='4.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.1'>(4.1)</a></div><p >the class shall not have any virtual base classes;</p></li><li id='4.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.2'>(4.2)</a></div><p >for a defaulted copy/move constructor, the class shall not have a
 mutable subobject that is a variant member;</p></li><li id='4.3'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.3'>(4.3)</a></div><p >each of the parameter types shall be a literal type;</p></li><li id='4.4'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.4'>(4.4)</a></div><p >its <i ><a href='dcl.fct.def.general#nt:function-body'>function-body</a></i> shall not be a <i ><a href='except#nt:function-try-block'>function-try-block</a></i>.
@@ -88,11 +88,11 @@ mutable subobject that is a variant member;</p></li><li id='4.3'><div class='mar
 <span class='texttt'>= delete</span>, or it shall satisfy the following requirements:
 </p><ul class='itemize'><li id='4.5'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.5'>(4.5)</a></div><p >either its <i ><a href='dcl.fct.def.general#nt:function-body'>function-body</a></i> shall be <span class='texttt'>= default</span>, or the <i ><a href='stmt.block#nt:compound-statement'>compound-statement</a></i> of its <i ><a href='dcl.fct.def.general#nt:function-body'>function-body</a></i>
 shall satisfy the requirements for a <i ><a href='dcl.fct.def.general#nt:function-body'>function-body</a></i> of a
-<span class='texttt'>constexpr</span> function;</p></li><li id='4.6'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.6'>(4.6)</a></div><p >every non-variant non-static data member and base class subobject
+constexpr function;</p></li><li id='4.6'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.6'>(4.6)</a></div><p >every non-variant non-static data member and base class subobject
 shall be initialized (<a href='class.base.init'>[class.base.init]</a>);</p></li><li id='4.7'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.7'>(4.7)</a></div><p >if the class is a union having variant members (<a href='class.union'>[class.union]</a>), exactly one of them
 shall be initialized;</p></li><li id='4.8'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.8'>(4.8)</a></div><p >if the class is a union-like class, but is not a union, for each of its anonymous union
 members having variant members, exactly one of them shall be initialized;</p></li><li id='4.9'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.9'>(4.9)</a></div><p >for a non-delegating constructor, every constructor selected to initialize non-static
-data members and base class subobjects shall be a <span class='texttt'>constexpr</span> constructor;</p></li><li id='4.10'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.10'>(4.10)</a></div><p >for a delegating constructor, the target constructor shall be a <span class='texttt'>constexpr</span>
+data members and base class subobjects shall be a constexpr constructor;</p></li><li id='4.10'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#4.10'>(4.10)</a></div><p >for a delegating constructor, the target constructor shall be a <span class='texttt'>constexpr</span>
 constructor.
 </p></li></ul><p >[&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
@@ -101,7 +101,7 @@ struct Length {
 private: 
   int val; 
 }; 
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >For a <span class='texttt'>constexpr</span> function or <span class='texttt'>constexpr</span> constructor
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >For a constexpr function or constexpr constructor
 that is neither defaulted nor a template,
 if no argument values exist such that
 an invocation of the function or constructor could be an evaluated subexpression of a core
@@ -125,24 +125,24 @@ struct D : B {
   constexpr D() : B(global) { }             <span class='comment'>// ill-formed, no diagnostic required
 </span>                                            <span class='comment'>// lvalue-to-rvalue conversion on non-constant <span class='texttt'>global</span>
 </span>};
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >If the instantiated template specialization of a <span class='texttt'>constexpr</span> function
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><p >If the instantiated template specialization of a constexpr function
 template
 or member function of a class template
 would fail to satisfy the requirements for a <span class='texttt'>constexpr</span>
-function or <span class='texttt'>constexpr</span> constructor,
-that specialization is still a <span class='texttt'>constexpr</span> function or <span class='texttt'>constexpr</span>
+function or constexpr constructor,
+that specialization is still a constexpr function or <span class='texttt'>constexpr</span>
 constructor, even though a call to such a function cannot appear in a constant
 expression. If no specialization of the template would satisfy the
-requirements for a <span class='texttt'>constexpr</span> function or <span class='texttt'>constexpr</span> constructor
+requirements for a constexpr function or constexpr constructor
 when considered as a non-template function or constructor, the template is
 ill-formed; no diagnostic
-required.</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >A call to a <span class='texttt'>constexpr</span> function produces the same result as a call to an equivalent
-non-<span class='texttt'>constexpr</span> function in all respects except that
+required.</p></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><p >A call to a constexpr function produces the same result as a call to an equivalent
+non-constexpr function in all respects except that
 </p><ul class='itemize'><li id='7.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#7.1'>(7.1)</a></div><p >a call to a <span class='texttt'>constexpr</span>
 function can appear in a constant expression (<a href='expr.const'>[expr.const]</a>) and
 </p></li><li id='7.2'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#7.2'>(7.2)</a></div><p >copy elision is mandatory in a constant expression (<a href='class.copy'>[class.copy]</a>).
 </p></li></ul></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><p >The <span class='texttt'>constexpr</span> specifier has no
-effect on the type of a <span class='texttt'>constexpr</span> function or a <span class='texttt'>constexpr</span> constructor.  [&nbsp;<i>Example:</i>
+effect on the type of a constexpr function or a constexpr constructor.  [&nbsp;<i>Example:</i>
 </p><pre class='codeblock'>
 constexpr int bar(int x, int y) <span class='comment'>// OK 
 </span>    { return x + y + x*y; } 
