--- a/variant.variant.html
+++ b/variant.variant.html
@@ -85,7 +85,7 @@ Constructs a <span class='texttt'>variant</span> holding a value-initialized val
 Any exception thrown by the value-initialization of <span class='texttt'>T</span><span class='math'><sub >0</sub></span>.</p></div></div><div class='para' id='variant.ctor-5'><div class='marginalizedparent'><a class='marginalized' href='#variant.ctor-5'>5</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 This function shall be <span class='texttt'>constexpr</span> if and only if the
 value-initialization of the alternative type <span class='texttt'>T</span><span class='math'><sub >0</sub></span> would satisfy the
-requirements for a <span class='texttt'>constexpr</span> function.
+requirements for a constexpr function.
 The expression inside <span class='texttt'>noexcept</span> is equivalent to
 <span class='texttt'>is_nothrow_default_constructible_v&lt;<span class='texttt'>T</span><span class='math'><sub >0</sub></span>&gt;</span>.
 This function shall not participate in overload resolution unless
@@ -174,7 +174,7 @@ with the arguments <span class='texttt'>std::forward&lt;Args&gt;(args)...</span>
 Any exception thrown by calling the selected constructor of <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>I</span></sub></span>.</p></div></div><div class='para' id='variant.ctor-30'><div class='marginalizedparent'><a class='marginalized' href='#variant.ctor-30'>30</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 This function shall not participate in overload resolution unless <span class='texttt'>I</span> is
 less than <span class='texttt'>sizeof...(Types)</span> and <span class='texttt'>is_constructible_v&lt;T<span class='math'><sub ><span class='mathalpha'>I</span></sub></span>, Args...&gt;</span> is <span class='texttt'>true</span>.
-If <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>I</span></sub></span>'s selected constructor is a <span class='texttt'>constexpr</span> constructor, this
+If <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>I</span></sub></span>'s selected constructor is a constexpr constructor, this
 constructor shall be a constexpr constructor.
 </p></div></div><p ><span class='indexparent'><a class='index' id='variant,constructor'></a></span><code class='itemdecl'>
 template &lt;size_t I, class U, class... Args&gt;
@@ -186,7 +186,7 @@ Initializes the contained value as if constructing an object of type
 This function shall not participate in overload resolution unless <span class='texttt'>I</span> is
 less than <span class='texttt'>sizeof...(Types)</span> and
 <span class='texttt'>is_constructible_v&lt;T<span class='math'><sub ><span class='mathalpha'>I</span></sub></span>, initializer_list&lt;U&gt;&amp;, Args...&gt;</span> is <span class='texttt'>true</span>.
-If <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>I</span></sub></span>'s selected constructor is a <span class='texttt'>constexpr</span> constructor, this
+If <span class='texttt'>T</span><span class='math'><sub ><span class='mathalpha'>I</span></sub></span>'s selected constructor is a constexpr constructor, this
 constructor shall be a constexpr constructor.
 </p></div></div><p ><span class='indexparent'><a class='index' id='variant,constructor'></a></span><code class='itemdecl'>
 <span class='comment'>// allocator-extended constructors
